<resources>
    <string name="app_name">DefinitiveProjecy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_priority">Priority</string>
    <string name="tv_dates">Date</string>
    <string name="tv_name_project">Name Project</string>
    <string name="tv_duration_project">Duration Project</string>
    <string name="tv_language">Language</string>
    <string name="tv_delete_project">Delete Project</string>
    <string name="btn_delete_project">Delete Project</string>
    <string name="tv_name_projects">Name Project</string>
    <string name="description_btn_statr">start\n</string>
    <string name="et_password">Password\n</string>
    <string name="et_user">User</string>
    <string name="et_name_project">Nombre del proyecto</string>
    <string name="et_description_projec">Descripción\n</string>
    <string name="descripcion">Descripcion\n</string>
    <string name="description_name">Nombre del proyecto</string>
    <string name="chec_medium">Medium\n</string>
    <string name="check_heigh">Heigh</string>
    <string name="et_description_name_projec">Caja para introducir el nombre del proyecto</string>
    <string name="tv_star_date">Fecha de incio\n</string>
    <string name="ed_duration_project">Tiempo a emplear</string>
    <string name="et_date">Fecha</string>
    <string name="ed_hour">Hours</string>
    <string name="btn_create_project">Crear proyecto</string>
    <string name="btn_create_pro">Crear proyecto</string>
    <string name="tv_detail">Detalle\n</string>
    <string name="tv_detail_pro">Detalle</string>
    <string name="btn_next">Siguiente\n</string>
    <string name="btn_next_fragment">Next\n</string>
    <string name="tv_message_project">Upps aún no tienes ningún proyecto, para crear un proyecto necesitas crear un Lenguaje</string>
    <string name="btn_back">Back</string>
    <string name="btn_new_language">Boton para crear nuevo lenguaje\n</string>
    <string name="et_name_language">Nombre</string>
    <string name="btn_create_lang">"Botón para crear un nuevo lenguaje "</string>
    <string name="btn_text_create_lang">Crear lenguage\n</string>
    <string name="tv_message_lang">Aún no tienes ningún lenguaje creado</string>
    <string name="btn_modify">Modificar\n</string>
    <string name="tv_desrip">Desripcion</string>
    <string name="et_name_pro_modify">Nombre del projecto</string>
    <string name="tv_date_modi">"Fecha de inicio "</string>
    <string name="check_low">Bajo\n</string>
    <string name="tv_time_mod">Tiempo a emplear</string>
    <string name="ed_detail_modifyq">"Aquí puedes especificar las caracteristicas del proyecto "</string>
    <string name="btn_modify_pro">Guardar cambios</string>
    <string name="che_medium">Media\n</string>
    <string name="check_alta">Alta</string>
    <string name="chec_low">Baja</string>
    <string name="tv_name_lang_mod">Java</string>
    <string name="tv_medium_check" />
    <string name="check_media">Media</string>
</resources>