<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_duration"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardBackgroundColor="@color/backgraound_new_peoject_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="229dp">

        <Button
            android:id="@+id/btn_delete_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/deep_pink"
            android:hint="@string/btn_delete_project"
            android:textColor="@color/colorOnPrimary"
            android:textColorHint="@color/material_dynamic_primary10"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_project"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_name_project"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="15dp"
            android:hint="@string/tv_name_projects"
            android:textAlignment="center"
            android:textColor="@color/colorOnPrimary"
            android:textColorHint="@color/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_priority" />

        <TextView
            android:id="@+id/tv_language_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="174dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/tv_language"
            android:textColor="@color/colorOnPrimary"
            android:textColorHint="@color/colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete_project"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration_project" />

        <TextView
            android:id="@+id/tv_priority"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@color/deep_pink"
            android:hint="@string/tv_priority"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_primary10"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_name_project"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_project"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_duration_project"
            android:layout_width="199dp"
            android:layout_height="68dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="52dp"
            android:hint="@string/tv_duration_project"
            android:textColor="@color/colorOnPrimary"
            android:textColorHint="#AAF6F2F2"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_name_project"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_date_project"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/deep_pink"
            android:hint="@string/tv_dates"
            android:padding="5dp"
            android:textColor="#FFFEFE"
            android:textColorHint="@color/colorOnPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>