<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/fc_create_project1_fragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/fondo_create_project"
      tools:context=".ui.CreateProject1Fragment" >

     <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/constraintLayout"
           android:layout_width="316dp"
           android:layout_height="569dp"
           android:layout_marginStart="50dp"
           android:layout_marginTop="100dp"
           android:layout_marginEnd="50dp"
           android:layout_marginBottom="100dp"
           android:background="@color/backgraound_new_peoject_card"
           android:paddingBottom="50dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="1.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.0">

          <TextView
                android:id="@+id/tv_title_calendar"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@color/school_bus_yellow"
                android:fontFamily="serif"
                android:text="Nuevo proyecto"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_name_pro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

          <EditText
                android:id="@+id/et_name_pro"
                android:layout_width="282dp"
                android:layout_height="54dp"
                android:layout_margin="30dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/et_description_name_projec"
                android:ems="10"
                android:hint="@string/et_name_project"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/deep_pink"
                android:textColorHint="@color/color_text_hint"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/et_detail_pro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_calendar" />

          <EditText
                android:id="@+id/et_detail_pro"
                android:layout_width="282dp"
                android:layout_height="54dp"
                android:layout_margin="30dp"
                android:contentDescription="@string/descripcion"
                android:ems="10"
                android:hint="@string/et_description_projec"

                android:inputType="textImeMultiLine"
                android:padding="10dp"
                android:textColor="@color/deep_pink"
                android:textColorHint="@color/color_text_hint"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name_pro" />

          <CheckBox
                android:id="@+id/cb_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="25dp"
                android:background="@color/bg_box_project"
                android:button="@null"
                android:text="Baja"
                android:textAlignment="center"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cb_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_priority" />

          <CheckBox
                android:id="@+id/cb_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="39dp"
                android:layout_marginBottom="36dp"
                android:background="@color/bg_box_project"
                android:button="@null"
                android:text="@string/chec_medium"
                android:textAlignment="center"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cb_high"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_low" />

          <CheckBox
                android:id="@+id/cb_high"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="18dp"
                android:background="@color/bg_box_project"
                android:button="@null"
                android:text="@string/check_heigh"
                android:textAlignment="center"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_medium" />

          <TextView
                android:id="@+id/tv_priority"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="17dp"
                android:background="@color/school_bus_yellow"
                android:padding="5dp"
                android:text="@string/tv_priority"
                android:textAlignment="center"
                android:textColor="@color/backgraound_new_peoject_card"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cb_low"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_detail_pro"
                app:layout_constraintVertical_bias="0.0" />

     </androidx.constraintlayout.widget.ConstraintLayout>

     <com.google.android.material.floatingactionbutton.FloatingActionButton
           android:id="@+id/btn_next"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:clickable="true"
           android:contentDescription="@string/btn_next_fragment"
           android:src="@android:drawable/dialog_holo_light_frame"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.954"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.954" />
</androidx.constraintlayout.widget.ConstraintLayout>