<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_create_language"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_language"
    tools:context=".ui.CreateLanguage2Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        android:background="@color/backgraound_new_peoject_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_create_language"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="@color/school_bus_yellow"
            android:padding="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/backgraound_new_peoject_card"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003" />

        <EditText
            android:id="@+id/et_name_new_language"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/et_name_language"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/deep_pink"
            android:textColorHint="@color/bg_box_project"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_create_languages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_create_language" />

        <Button
            android:id="@+id/btn_create_languages"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="144dp"
            android:contentDescription="@string/btn_create_lang"
            android:text="@string/btn_text_create_lang"
            android:textColor="@color/backgraound_new_peoject_card"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_create_language" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>